--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 7:22:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 7:23:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,26 +166,10 @@ E (F)</td>
 E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -8
--5 (F)</td>
-      <td>Cameron Smith -2
-+2 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -200,8 +184,8 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -232,8 +216,8 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -252,22 +236,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-1</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Justin Thomas -1
--5 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Russell Henley +3
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
@@ -280,8 +248,8 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout leftborder">Daniel Berger +2
 +3 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -294,10 +262,10 @@ E (F)</td>
 +3 (F)</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -310,10 +278,26 @@ E (F)</td>
 -5 (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">1</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Justin Thomas -1
+-5 (F)</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Russell Henley +3
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -328,8 +312,8 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -342,14 +326,14 @@ E (F)</td>
 E (F)</td>
       <td>Tony Finau +2
 +3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">7</td>
       <td>Dustin Johnson -2
 +1 (F)</td>
       <td>Patrick Cantlay +1
@@ -358,25 +342,9 @@ E (F)</td>
 E (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +6
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas(W) -1
--5 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -390,10 +358,36 @@ E (F)</td>
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Luke List +8
-+3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Luke List
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold greyout">Larry Judge</td>
+      <td class="bigbold greyout">-</td>
+      <td class="greyout">Scottie Scheffler(W)</td>
+      <td class="greyout">Cameron Smith</td>
+      <td class="greyout">Corey Conners</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold greyout">Adam Ryan</td>
+      <td class="bigbold greyout">-</td>
+      <td class="greyout">Justin Thomas(W)</td>
+      <td class="greyout">Corey Conners</td>
+      <td class="greyout">Jon Rahm</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
   </tbody>
 </table>
