--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 8:22:30 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 8:23:13 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,29 +143,29 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -8
--5 (F)</td>
+Not started</td>
       <td>Shane Lowry -3
--4 (F)</td>
+Not started</td>
       <td>Justin Thomas(W) -1
--5 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
-E (F)</td>
+Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Tony Finau +2
-+3 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -8
--5 (F)</td>
+Not started</td>
       <td>Shane Lowry -3
--4 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
-E (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-E (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -175,15 +175,15 @@ Missed Cut</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-7</td>
       <td>Shane Lowry -3
--4 (F)</td>
+Not started</td>
       <td>Cameron Smith -2
-+2 (F)</td>
+Not started</td>
       <td>Justin Thomas(W) -1
--5 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
-E (F)</td>
+Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
-+1 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -191,31 +191,31 @@ Missed Cut</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-4</td>
       <td>Shane Lowry -3
--4 (F)</td>
+Not started</td>
       <td>Justin Thomas(W) -1
--5 (F)</td>
+Not started</td>
       <td>Corey Conners -1
-+1 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +1
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
+Not started</td>
       <td class="greyout">Tyrrell Hatton +2
-+2 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
       <td>Sungjae Im -3
-+2 (F)</td>
+Not started</td>
       <td>Justin Thomas -1
--5 (F)</td>
+Not started</td>
       <td>Collin Morikawa -1
--2 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +1
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -223,31 +223,31 @@ Missed Cut</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
-+2 (F)</td>
+Not started</td>
       <td>Justin Thomas -1
--5 (F)</td>
+Not started</td>
       <td>Joaquin Niemann -1
-+2 (F)</td>
+Not started</td>
       <td>Rory McIlroy +2
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E (F)</td>
+Not started</td>
       <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
--5 (F)</td>
+Not started</td>
       <td>Collin Morikawa -1
--2 (F)</td>
+Not started</td>
       <td>Will Zalatoris -1
-E (F)</td>
+Not started</td>
       <td>Tony Finau +2
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Daniel Berger +2
-+3 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -255,13 +255,13 @@ Missed Cut</td>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) -2
-+2 (F)</td>
+Not started</td>
       <td>Collin Morikawa -1
--2 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +1
-+3 (F)</td>
+Not started</td>
       <td>Rory McIlroy +2
-+1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -271,13 +271,13 @@ Missed Cut</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) -2
-+2 (F)</td>
+Not started</td>
       <td>Corey Conners -1
-+1 (F)</td>
+Not started</td>
       <td>Justin Thomas -1
--5 (F)</td>
+Not started</td>
       <td>Viktor Hovland +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -287,13 +287,13 @@ Missed Cut</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
-+1 (F)</td>
+Not started</td>
       <td>Justin Thomas -1
--5 (F)</td>
+Not started</td>
       <td>Corey Conners -1
-+1 (F)</td>
+Not started</td>
       <td>Russell Henley +3
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
@@ -303,15 +303,15 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">2</td>
       <td>Corey Conners(W) -1
-+1 (F)</td>
+Not started</td>
       <td>Collin Morikawa -1
--2 (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-E (F)</td>
+Not started</td>
       <td>Daniel Berger +2
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
+Not started</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -319,13 +319,13 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">4</td>
       <td>Collin Morikawa -1
--2 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +1
-+3 (F)</td>
+Not started</td>
       <td>Jon Rahm(W) +2
-E (F)</td>
+Not started</td>
       <td>Tony Finau +2
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -335,13 +335,13 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">7</td>
       <td>Dustin Johnson -2
-+1 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +1
-+3 (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-E (F)</td>
+Not started</td>
       <td>Viktor Hovland +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -351,13 +351,13 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">8</td>
       <td>Collin Morikawa -1
--2 (F)</td>
+Not started</td>
       <td>Jon Rahm +2
-E (F)</td>
+Not started</td>
       <td>Patrick Reed +3
-+1 (F)</td>
+Not started</td>
       <td>Viktor Hovland(W) +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
