--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 10:32:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 10:32:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -492,22 +492,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Adam Scott +4
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
@@ -553,6 +537,22 @@ Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Adam Scott +5
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
