--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 10:50:55 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 10:51:38 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -391,7 +391,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
