--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:00:57 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:01:40 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -246,8 +246,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -278,8 +278,8 @@ Not started</td>
 Not started</td>
       <td>Tyrrell Hatton +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
+E thru 2</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -312,8 +312,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
-      <td class="greyout">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout">Viktor Hovland +4
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -422,8 +422,8 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -438,8 +438,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -454,8 +454,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -504,8 +504,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 Not started</td>
-      <td class="greyout">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout">Viktor Hovland +4
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -568,8 +568,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Rory McIlroy +2
 Not started</td>
-      <td class="greyout">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout">Viktor Hovland +4
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -636,6 +636,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry(W) -3
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Joaquin Niemann -1
+Not started</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -2
@@ -652,19 +668,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">0</td>
-      <td>Shane Lowry(W) -3
+      <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Joaquin Niemann -1
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Sam Burns
+      <td>Viktor Hovland +4
+E thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
-      <td class="greyout">Brian Harman
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Jon Rahm(W) +2
+Not started</td>
+      <td>Rory McIlroy +2
+Not started</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -678,8 +710,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
+E thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -694,8 +726,8 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -710,41 +742,9 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -790,8 +790,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -806,9 +806,41 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm +2
+Not started</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+Not started</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -838,8 +870,8 @@ Not started</td>
 Not started</td>
       <td>Bubba Watson +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -860,48 +892,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Patrick Reed +3
 Not started</td>
-      <td>Viktor Hovland(W) +5
-+1 thru 1</td>
+      <td>Viktor Hovland(W) +4
+E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
