--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:00:57 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:01:40 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +5
-+1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
+E thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -232,8 +232,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 Not started</td>
-      <td class="greyout">Viktor Hovland +5
-+1 thru 1</td>
+      <td class="greyout">Viktor Hovland +4
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -268,6 +268,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -281,22 +297,6 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 1</td>
+      <td>Viktor Hovland +4
+E thru 2</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Patrick Reed +3
 Not started</td>
-      <td>Viktor Hovland(W) +5
-+1 thru 1</td>
+      <td>Viktor Hovland(W) +4
+E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
