--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:10:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:10:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -390,8 +390,8 @@ Not started</td>
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td class="greyout leftborder">Marc Leishman +4
-E thru 1</td>
+      <td class="greyout leftborder">Marc Leishman +3
+-1 thru 2</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
