--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:13:08 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:13:51 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -231,7 +231,7 @@ Not started</td>
       <td>Rory McIlroy +2
 Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Viktor Hovland +4
 E thru 3</td>
     </tr>
