--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:21:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:21:44 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -348,22 +348,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Billy Horschel +3
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-8</td>
       <td>Shane Lowry -3
@@ -391,7 +375,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +3
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -409,6 +393,22 @@ Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
 Not started</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Billy Horschel +4
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
