--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:28:54 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:29:37 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -228,10 +228,10 @@ Not started</td>
 Not started</td>
       <td>Joaquin Niemann -1
 Not started</td>
-      <td>Rory McIlroy +2
+      <td>Tommy Fleetwood(W) +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 Not started</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E thru 1</td>
       <td class="greyout">Viktor Hovland +4
 E thru 4</td>
     </tr>
