--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:30:20 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:31:03 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -355,7 +355,7 @@ Not started</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Patrick Reed +3
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +4
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
