--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:32:29 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:33:12 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -215,7 +215,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Russell Henley +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
