--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:41:48 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:42:31 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
-      <td class="greyout">Tony Finau +2
-Not started</td>
+      <td class="greyout">Tony Finau +3
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -524,22 +524,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Dustin Johnson(W) -2
-Not started</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Tony Finau +2
-Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
@@ -570,6 +554,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Viktor Hovland +4
 E thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Dustin Johnson(W) -2
+Not started</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Tony Finau +3
++1 thru 1</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm(W) +2
 Not started</td>
-      <td>Tony Finau +2
-Not started</td>
+      <td>Tony Finau +3
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
