--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:46:49 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:47:32 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +3
-E thru 1</td>
+      <td class="greyout leftborder">Russell Henley +2
+-1 thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
