--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:46:49 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:47:32 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,6 +252,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Russell Henley +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) -2
@@ -281,22 +297,6 @@ E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Russell Henley +3
-E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
