--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:48:59 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:49:42 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -300,6 +300,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Billy Horschel +2
+-1 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
@@ -346,22 +362,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Jon Rahm +2
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Billy Horschel +3
-E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
