--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:52:34 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:53:17 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,22 +284,6 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Talor Gooch +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -8
@@ -342,6 +326,22 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +3
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -486,8 +486,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +2
 Not started</td>
-      <td class="greyout leftborder">Talor Gooch +2
-Not started</td>
+      <td class="greyout leftborder">Talor Gooch +3
++1 thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
