--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:54:43 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:55:26 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -755,7 +755,7 @@ Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Daniel Berger +2
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre +2
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -803,7 +803,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Daniel Berger +2
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +2
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +4
