--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:54:43 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:55:26 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -245,7 +245,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Daniel Berger +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Tony Finau +3
 +1 thru 1</td>
       <td class="greyout">Brooks Koepka
@@ -309,7 +309,7 @@ Not started</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Daniel Berger +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 Not started</td>
       <td class="greyout">Jordan Spieth
