--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:56:09 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 11:56:52 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
-      <td class="greyout">Tony Finau +3
-+1 thru 1</td>
+      <td class="greyout">Tony Finau +2
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -244,10 +244,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Daniel Berger +2
+      <td>Tony Finau +2
+E thru 2</td>
+      <td class="greyout leftborder">Daniel Berger +2
 E thru 1</td>
-      <td class="greyout leftborder">Tony Finau +3
-+1 thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm(W) +2
 Not started</td>
-      <td>Tony Finau +3
-+1 thru 1</td>
+      <td>Tony Finau +2
+E thru 2</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
