--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:11:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:12:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +3
-E thru 3</td>
+      <td class="greyout leftborder">Russell Henley +4
++1 thru 4</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -754,12 +754,12 @@ Missed Cut</td>
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Daniel Berger +2
-E thru 1</td>
       <td>Robert MacIntyre +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 Not started</td>
+      <td class="greyout leftborder">Daniel Berger +3
++1 thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -793,22 +793,6 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +5
 +1 thru 7</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Daniel Berger +2
-E thru 1</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +5
-+1 thru 7</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -857,6 +841,22 @@ E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Jon Rahm +2
+Not started</td>
+      <td>Daniel Berger +3
++1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +5
++1 thru 7</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
