--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:11:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:12:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -246,8 +246,8 @@ Not started</td>
 Not started</td>
       <td>Tony Finau +2
 E thru 3</td>
-      <td class="greyout leftborder">Daniel Berger +2
-E thru 1</td>
+      <td class="greyout leftborder">Daniel Berger +3
++1 thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -268,22 +268,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Russell Henley +3
-E thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">1</td>
       <td>Cameron Smith(W) -2
@@ -300,6 +284,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">2</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Russell Henley +4
++1 thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">2</td>
       <td>Corey Conners(W) -1
@@ -308,10 +308,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td>Daniel Berger +2
-E thru 1</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
+      <td>Robert MacIntyre +2
 Not started</td>
+      <td class="greyout leftborder">Daniel Berger +3
++1 thru 2</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
