--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:12:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:13:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,6 +284,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +2
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
@@ -310,22 +326,6 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Talor Gooch +3
-+1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -391,7 +391,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +3
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -486,8 +486,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +2
 Not started</td>
-      <td class="greyout leftborder">Talor Gooch +3
-+1 thru 1</td>
+      <td class="greyout leftborder">Talor Gooch +2
+E thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -629,7 +629,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Adam Scott +7
-+3 thru 7</td>
++3 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
