--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:16:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:17:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -228,10 +228,10 @@ Not started</td>
 Not started</td>
       <td>Joaquin Niemann -1
 Not started</td>
-      <td>Tommy Fleetwood(W) +2
--1 thru 5</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 Not started</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+E thru 6</td>
       <td class="greyout">Viktor Hovland +5
 +1 thru 7</td>
     </tr>
