--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:34:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:35:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -726,8 +726,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Daniel Berger +4
-+2 thru 3</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 4</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -884,10 +884,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td>Daniel Berger +4
-+2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +4
+      <td>Viktor Hovland +4
 E thru 8</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 4</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
