--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:53:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:54:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +5
-+1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
+E thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -248,8 +248,24 @@ Not started</td>
 E thru 7</td>
       <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 2</td>
-      <td class="greyout">Viktor Hovland +5
-+1 thru 9</td>
+      <td class="greyout">Viktor Hovland +4
+E thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Viktor Hovland +4
+E thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -265,22 +281,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +5
-+1 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
 E thru 1</td>
       <td>Patrick Reed +2
 -1 thru 7</td>
-      <td>Viktor Hovland(W) +5
-+1 thru 9</td>
+      <td>Viktor Hovland(W) +4
+E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
 E thru 1</td>
-      <td>Viktor Hovland +5
-+1 thru 9</td>
+      <td>Viktor Hovland +4
+E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
