--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:06:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:07:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
+-1 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -230,10 +230,26 @@ Not started</td>
 Not started</td>
       <td>Tommy Fleetwood(W) +3
 E thru 8</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout">Rory McIlroy +3
 +1 thru 3</td>
-      <td class="greyout">Viktor Hovland +4
-E thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -249,22 +265,6 @@ Not started</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 6</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
       <td>Patrick Reed +2
 -1 thru 7</td>
-      <td>Viktor Hovland(W) +4
-E thru 10</td>
+      <td>Viktor Hovland(W) +3
+-1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
