--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:06:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:07:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -246,8 +246,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -312,8 +312,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 2</td>
-      <td class="greyout">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -340,10 +340,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Tyrrell Hatton +3
+      <td>Viktor Hovland(W) +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Tyrrell Hatton +3
 +1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-E thru 10</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -374,8 +374,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -436,10 +436,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Rory McIlroy +3
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -470,8 +470,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -504,8 +504,8 @@ Not started</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
-      <td class="greyout">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -582,10 +582,10 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods(W) +1
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout">Rory McIlroy +3
 +1 thru 3</td>
-      <td class="greyout">Viktor Hovland +4
-E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -620,6 +620,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry(W) -3
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Joaquin Niemann -1
+Not started</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
@@ -636,19 +652,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-1</td>
-      <td>Shane Lowry(W) -3
+      <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Joaquin Niemann -1
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Sam Burns
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
-      <td class="greyout">Brian Harman
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td>Rory McIlroy +3
++1 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -662,40 +694,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-E thru 10</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
+-1 thru 11</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -713,6 +713,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -740,10 +756,10 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods +1
 Not started</td>
-      <td>Rory McIlroy +3
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -756,10 +772,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Rory McIlroy +3
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -780,6 +796,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">3</td>
       <td>Dustin Johnson -2
@@ -790,41 +822,25 @@ Not started</td>
 -1 thru 2</td>
       <td>Rory McIlroy(W) +3
 +1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris -1
+      <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 6</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -860,32 +876,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 2</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 6</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
       <td>Patrick Reed +2
 -1 thru 7</td>
-      <td>Viktor Hovland(W) +4
-E thru 10</td>
+      <td>Viktor Hovland(W) +3
+-1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 2</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
       <td>Rory McIlroy +3
 +1 thru 3</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
       <td class="greyout leftborder">Bubba Watson +5
 +3 thru 1</td>
       <td class="greyout">Jordan Spieth
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
