--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:08:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:09:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -294,10 +294,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Robert MacIntyre +3
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout">Robert MacIntyre +3
 +1 thru 1</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -429,17 +429,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Viktor Hovland +3
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 3</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -486,8 +486,8 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods +1
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +3
-+1 thru 3</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
+E thru 4</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -582,10 +582,10 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods(W) +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout">Viktor Hovland +3
 -1 thru 11</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -598,8 +598,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 3</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 4</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -617,6 +617,22 @@ Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -668,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Viktor Hovland +3
--1 thru 11</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
       <td>Collin Morikawa -1
@@ -713,6 +713,70 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa(W) -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Tiger Woods +1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">2</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td>Rory McIlroy(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -748,54 +812,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa(W) -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Tiger Woods +1
-Not started</td>
-      <td>Viktor Hovland +3
--1 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 3</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Viktor Hovland +3
--1 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 3</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -1
@@ -812,19 +828,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">3</td>
-      <td>Dustin Johnson -2
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Patrick Cantlay +1
+      <td>Patrick Cantlay(W) +1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td>Rory McIlroy(W) +3
-+1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 11</td>
-      <td class="greyout">Jordan Spieth
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -844,19 +860,19 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">4</td>
-      <td>Justin Thomas -1
+      <td>Cameron Smith -2
 Not started</td>
-      <td>Patrick Cantlay(W) +1
-Not started</td>
-      <td>Jon Rahm +1
+      <td>Jon Rahm(W) +1
 -1 thru 2</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td>Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout leftborder">Bubba Watson +5
++3 thru 1</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -888,22 +904,6 @@ Not started</td>
 -1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Viktor Hovland +3
--1 thru 11</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
-      <td class="greyout leftborder">Bubba Watson +5
-+3 thru 1</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
