--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:08:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:09:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -221,19 +221,19 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Joaquin Niemann -1
 Not started</td>
-      <td>Tommy Fleetwood(W) +3
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
 E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td class="greyout">Viktor Hovland +3
 -1 thru 11</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -269,15 +269,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
+      <td>Rory McIlroy +2
+E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
