--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:40:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:41:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,6 +252,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">1</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Russell Henley +3
+E thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
@@ -281,22 +297,6 @@ E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Russell Henley +4
-+1 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
